fix: avoid overflows on small screens

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -244,6 +244,12 @@
   }
 }
 
+@media (max-width: 1000px) {
+  .query pre {
+    white-space: pre-wrap;
+  }
+}
+
 @media (min-width: 1700px) {
   .query {
     max-width: 800px;
@@ -255,7 +261,7 @@
 
 .queryInfo {
   max-width: 100vw;
-  margin: 0 2em;
+  padding: 0 2em;
 }
 .queryInfo a {
   color: var(--primary);
@@ -268,7 +274,6 @@
   border: 1px solid #24282a;
 }
 .query {
-  white-space: pre-wrap;
   padding: 1em;
   background-color: #181b1e;
   border: 1px solid #24282a;
@@ -332,6 +337,18 @@
 
 .footer svg {
   margin: 0 0.5em;
+}
+
+@media (max-width: 600px) {
+  .footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0 2em;
+  }
+  .footer a {
+    padding: 1em;
+    margin: 0;
+  }
 }
 
 .madeBy {
